--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Test strony github pages.</p>
+<h1>Shoku Ai </h1>
+<p>Witaj! ShokuAi to mobilna aplikacja do generowania przepisów i tworzenia listy zakupów.</p>
+<p> Wkrótce dostępna!</p>
+<p> (Nie wiem co więcej napisać) </p>
 </body>
 </html>
